Version Gradle du template Java 25